css/style.css
/* ... */
.option:hover {
  background:var(--bg-black-100);
}
.select:focus .option {
  position:relative;
  pointer-events:all;
}
input {
  opacity:0;
  position:absolute;
  left:-99999px;
}
input:checked + label {
  -webkit-box-ordinal-group: 2;
      -ms-flex-order: 1;
          order: 1;
  z-index:2;
  border: 1px solid #02577a33;
  position:relative;
}
input:checked + label:after {
  content:'';
  width: 0; 
	height: 0; 
	border-left: 5px solid transparent;
	border-right: 5px solid transparent;
	border-top: 5px solid var(--skin-color-04);
  position:absolute;
  right:10px;
  top:calc(50% - 2.5px);
  pointer-events:none;
  z-index:3;
}
input:checked + label:before {
  position:absolute;
  right:0;
  height: 40px;
  width: 40px;
  content: '';
}

/* Main Responsiveness */
@media(max-width: 991px){
  .jobs-section .jobs-item{
      -webkit-box-flex: 0;
          -ms-flex: 0 0 50%;
              flex: 0 0 50%;
      max-width: 50%;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
}

@media(max-width: 767px){
  .contact-section .w-50,
  .jobs-poup .description,
  .about-section .skills .skill-item,
  .about-section .about-info,
  .about-section .about-img,
  .home-section .home-text,
  .home-section .home-img{
      -webkit-box-flex: 0;
          -ms-flex: 0 0 100%;
              flex: 0 0 100%;
      max-width: 100%;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .home-section .home-text{
      -webkit-box-ordinal-group: 3;
          -ms-flex-order: 2;
              order: 2;
  }
  .contact-section .submit-btn,
  .home-section .home-text{
      text-align: center;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .home-section .full-screeen{
      padding:  100px 0;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .home-section .home-img .img-box{
      margin-bottom: 40px;
      max-width: 350px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .effect-3{
      margin-left: -60px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .effect-4{
      left: 15%;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .effect-5{
      right: 4%;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .about-img{
      padding-bottom: 30px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
      max-width: 50%;
  }
  .about-section .timeline .timeline-item:nth-child(odd){
      padding-right: 15px;
      text-align: left;
      padding-left: 75px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .timeline .timeline-item:nth-child(even){
      padding-left: 75px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .timeline:before{
      left: 35px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .timeline .timeline-item:nth-child(odd) .icon{
      right: auto;
      left: -60px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .timeline .timeline-item:nth-child(even) .icon{
      left: -60px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .timeline .timeline-item{
      margin-bottom: 30px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .timeline .timeline-item-inner{
      padding: 18px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .timeline .timeline-item:last-child{
      margin-bottom:  0;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .timeline .timeline-item:nth-child(odd) .timeline-item-inner:before{
      left: -30px;
      right: auto;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .about-section .timeline .timeline-item:nth-child(even) .timeline-item-inner:before{
      left: -30px;
      right: auto;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .contact-section .contact-item{
      -webkit-box-flex: 100%;
          -ms-flex: 100%;
              flex: 100%;
      max-width: 100%;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
  .contact-section .contact-item-inner{                                             
      padding: 10px 15px;
      -webkit-transition: ease all .5s;
      -o-transition: ease all .5s;
      transition: ease all .5s;
  }
}
/* ... */

